--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -24,7 +24,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Objectification in Action: Self- and Other-Objectification in Same-gender Interactions},
-            pdfauthor={Kat Kyuchukova, Asha Hinson, \& Randi L. Garcia},
+            pdfauthor={Randi L. Garcia, Kat Kyuchukova, \& Asha Hinson},
             pdfkeywords={keywords},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -65,14 +65,14 @@
 
   \title{Objectification in Action: Self- and Other-Objectification in
 Same-gender Interactions}
-    \author{Kat Kyuchukova\textsuperscript{1}, Asha Hinson\textsuperscript{1}, \&
-Randi L. Garcia\textsuperscript{1}}
+    \author{Randi L. Garcia\textsuperscript{1, 2}, Kat
+Kyuchukova\textsuperscript{1}, \& Asha Hinson\textsuperscript{1}}
     \date{}
   
 \shorttitle{Objectification in Action}
 \affiliation{
 \vspace{0.5cm}
-\textsuperscript{1} Smith College}
+\textsuperscript{1} Department of Psychology, Smith College\\\textsuperscript{2} Program in Statistical and Data Sciences, Smith College}
 \keywords{keywords}
 \usepackage{csquotes}
 \usepackage{upgreek}
@@ -101,80 +101,70 @@ Randi L. Garcia\textsuperscript{1}}
 \renewcommand{\efloat@iwrite}[1]{\immediate\expandafter\protected@write\csname efloat@post#1\endcsname{}}
 \makeatother
 
-\
+\authornote{
+
+Correspondence concerning this article should be addressed to Randi L.
+Garcia, 415 Bass Hall, Smith College, Northampton, MA 01060. E-mail:
+\href{mailto:rgarcia@smith.edu}{\nolinkurl{rgarcia@smith.edu}}}
 
 \abstract{
-Objectification theory is a valuable framework for conceptualizing the
-psychological consequences of being female within a society that
-sexually objectifies the female body, and considering the ways in which
-girls and women are acculturated to then internalize an observer's
-perspective as a primary view of their appearance. Empirical evidence
-has largely elucidated links between objectification,
+Empirical evidence has only found links between objectification,
 self-objectification, and negative outcomes for woman within
-interpersonal interactions between male-female pairs particularly. The
-purpose of the present study was to extend past research and consider
-the relationships between such valuable phenomena and their effects on
-authenticity within interactions between female pairs. Woman were
-brought into the laboratory and interacted in same-sex dyads. Dyadic
-analysis was utilized to detect whether partners' objectification of
-each other affected state self-objectification, and the resulting
-feelings of comfort and authenticity during the interaction. After the
-interaction, participants completed a questionnaire which measured many
-constructs including cognitive performance, career aspirations, and
-relationship agency. Results revealed no significant relationship
-between self-objectification and authenticity. Further, although there
-were significantly negative effects on career aspirations and
-relationship agency resulting from a lack of relationship authenticity,
-there was no evidence that this is due to feelings of sexual
-objectification. The significant partner effect of objectification on
-actor self-objectification suggests that women being objectified by
-other women still results in feelings of self-objectification, and such
+interpersonal interactions between male-female pairs. The purpose of the
+present study was to extend past research and consider the relationships
+between such valuable phenomena and their effects on authenticity within
+interactions between female pairs. Woman were brought into the
+laboratory and interacted in same-sex dyads. Dyadic analysis was
+utilized to detect whether partners' objectification of each other
+affected state self-objectification, and the resulting feelings of
+comfort and authenticity during the interaction. After the interaction,
+participants completed a questionnaire which measured many constructs
+including cognitive performance, career aspirations, and relationship
+agency. Results revealed no significant relationship between
+self-objectification and authenticity. Further, although there were
+significantly negative effects on career aspirations and relationship
+agency resulting from a lack of relationship authenticity, there was no
+evidence that this is due to feelings of sexual objectification. The
+significant partner effect of objectification on actor
+self-objectification suggests that women being objectified by other
+women still results in feelings of self-objectification, and such
 research has powerful implications for the ways that women interact in
-both sexual and non-sexual settings.
+both sexual and non-sexual settings. AUTHOR NOTE: mention Clark trigram
+coders Hannah et al.
+
+
 }
 
 \begin{document}
 \maketitle
 
-\section{Introduction}\label{introduction}
-
 Theorists across diverse disciplines have explored the multiple ways
 that the body conveys social meaning, as well as how these meanings
-shape gendered experiences and therefore inform individuals' thinking,
-feeling, and behavior, especially during interpersonal interactions with
-members of different social groups (``Engendered lives,'' 1993).
-Empirical evidence illustrates how women, in particular, continue to be
-objects of perpetual discrimination as a result of psychosocial markers,
-like gender, that produce modes through which their identity is
-understood (Swim, Hyers, Cohen, \& Ferguson, 2001). Objectification
-theory, a valuable theoretical framework proposed by Roberts and
-Fredrickson (1997) which works to contextualize female bodies as
-socio-cultural constructions, can be employed to illuminate the gender
-oppression and negative lived experiences of girls and women.
-Additionally, one of the most detrimental forms of discrimination
-against them is thought to be the process by which their whole being is
-viewed as a collection of sexualized body parts valued predominantly for
-commodification, a phenomena termed sexual objectification (Bartky,
-1990). Sexual objectification occurs with both \enquote{endless variety
-and monotonous similarity,} and is thus mediated by unique combinations
-of race, ethnicity, sexuality, age, and class (Fredrickson, Hendler,
-Nilsen, O'Barr, \& Roberts, 2011; Rubin, 1975, cited in Fraser and
-Nicholson (1989), p.~28). Amid such heterogeneity though,
-\enquote{having a reproductively mature female body} proposed by Roberts
-and Fredrickson (1997) is likely to create a shared vulnerability to
-sexual objectification and a variety of shared negative experiences as a
-result. Studies have shown that within social encounters women are gazed
-at more than men (Briton \& Hall, 1995), often times feel
-\enquote{looked at} within interpersonal interactions (Argyle \&
-Williams, 1969), and will more than likely internalize the objectifying
-gaze on physical self (Young, 1979). Moreover, perhaps the most adverse
-effect of objectifying treatment is that it effectively socializes girls
-and women to treat themselves as objects to be looked at and evaluated,
-an effect termed self-objectification (Bartky, 1990; Berger, Cohen, \&
-Zelditch Jr, 1972; L. Fredrickson, Roberts, M. Noll, Quinn, \& Twenge,
-1998). Self-objectification is a multidimensional process that accounts
-for the cognitive mechanism that translates experiences of sexualization
-at the cultural level to psychological (e.g., anxiety, self-esteem,
+shape gendered experiences, especially during interpersonal interactions
+with members of different social groups (``Engendered lives,'' 1993,
+Garcia, Earnshaw, and Quinn (2016)). Objectification theory, a valuable
+theoretical framework proposed by Roberts and Fredrickson (1997) which
+works to contextualize female bodies as socio-cultural constructions,
+can be employed to illuminate the gender oppression and negative lived
+experiences of girls and women. Empirical evidence illustrates how women
+continue to be objects of interpersonal discrimination and expereince
+daily sexist hassles (Swim, Hyers, Cohen, \& Ferguson, 2001). One form
+of interpersonal discrimination women face is the process by which their
+whole being is viewed as a collection of sexualized body parts valued
+predominantly for commodification, a phenomena termed sexual
+objectification (Bartky, 1990). Sexual objectification occurs with both
+\enquote{endless variety and monotonous similarity,} and is thus
+mediated by unique combinations of race, ethnicity, sexuality, age, and
+class (Fredrickson, Hendler, Nilsen, O'Barr, \& Roberts, 2011; Rubin,
+1975, cited in Fraser and Nicholson (1989), p.~28). Amid such
+heterogeneity though, \enquote{having a reproductively mature female
+body} proposed by Roberts and Fredrickson (1997) is likely to create a
+shared vulnerability to sexual objectification and a variety of shared
+negative experiences as a result.
+
+Self-objectification is a multidimensional process that accounts for the
+cognitive mechanism that translates experiences of sexualization at the
+cultural level to psychological (e.g., anxiety, self-esteem,
 authenticity, motivational states) and behavioral (cognitive
 performance, body monitoring) features of mental health and well-being
 at the individual level (Calogero, Tantleff-Dunn, \& Thompson, 2011;
@@ -186,30 +176,45 @@ which can lead to a state of self-objectification (Calogero et al.,
 2011, Moradi and Huang (2008)). Being objectified by another person and
 possessing trait-level self-objectification (TSO) may interact to
 influence experiences of feeling like a body, or state
-self-objectification (SSO). In the current work, we sought to examine
-what occurs during an interaction in which one or both partners are
-objectifying each other, similarly to Garcia, Earnshaw, and Quinn
-(2016), but between same-sex female interpersonal interactions. We
-predicted that being objectified by one's interaction partner would lead
-to self-objectification, in addition to modified feelings of
-authenticity in postinteraciton outcomes, including feelings of agency
-in romantic relationships, career aspiration, and cognitive performance
-(D. M. Quinn, Chaudoir, \& Kallen, 2011). Empirical evidence reveals
-that objectification manifests through inauthenticity in romantic
-relationships (Brunell et al., 2010), adverse attitudes in regard to
-career aspirations, and a decrease in concentration and impairment in
-female cognitive performance (Swim et al., 2001). Moreover, it was the
-goal of this research to empirically explore the role of interaction
-authenticity in objectification by utilizing a structural equation
-modeling to examine the effects for both women simultaneously. We
-expected to replicate the results found in the previous Garcia et al.
-(2016) study. More specifically, we expected to find a positive
-relationship between state-other objectification and self-state
-objectification, and a resulting negative relationship between
-self-state objectification and interaction authenticity. Finally, we
-expected there to be a positive relationship between interaction
-authenticity and cognitive performance, relationship agency, and career
-aspirations.
+self-objectification (SSO) (CITE swimsuit sweater, Garcia et al., 2016).
+
+Studies have shown that within social encounters women are gazed at more
+than men (Briton \& Hall, 1995, CITE saguy skype study, calogero video
+walking study), often times feel \enquote{looked at} within
+interpersonal interactions (Argyle \& Williams, 1969), and will more
+than likely internalize the objectifying gaze on physical self (Young,
+1979). Moreover, perhaps the most adverse effect of objectifying
+treatment is that it effectively socializes girls and women to treat
+themselves as objects to be looked at and evaluated, an effect termed
+self-objectification (Bartky, 1990; Berger, Cohen, \& Zelditch Jr, 1972;
+L. Fredrickson, Roberts, M. Noll, Quinn, \& Twenge, 1998).
+
+ENTIRE PARAGRAPH ON MODERN (POST-2016) STUDIES OF INTERPERSONAL
+OBJECTIFICATION.
+
+Empirical evidence reveals that objectification manifests through
+inauthenticity in romantic relationships (Brunell et al., 2010), adverse
+attitudes in regard to career aspirations, and a decrease in
+concentration and impairment in female cognitive performance (D. M.
+Quinn, Chaudoir, \& Kallen, 2011).
+
+In the current study, we sought to examine what occurs during an
+interaction in which one or both partners are objectifying each other,
+similarly to Garcia et al. (2016), but between same-sex female
+interpersonal interactions. Moreover, the current study uses a
+face-to-face interaction paradigm and dyadic data analysis techniques to
+examine the effects for both women simultaneously. We expected to
+replicate the results found in Garcia et al. (2016). We predicted that
+being objectified by one's interaction partner would lead to
+self-objectification, which in turn would lead to feelings of
+inauthenticity, then reduced feelings of agency in romantic
+relationships, reduced career aspiration, and reduced cognitive
+performance. Specifically, we expected to find a positive relationship
+between other-objectification by one's partner and state
+self-objectification. We also expect to find a negative relationship
+between self-state objectification and interaction authenticity, and
+that interaction authenticity will be positively related to cognitive
+performance, relationship agency, and career aspirations.
 
 \section{Methods}\label{methods}
 
@@ -249,11 +254,52 @@ used is found in Garcia et al. (2016)'s study.
 
 \subsection{Combining Samples}\label{combining-samples}
 
-Data from two different samples were used for this study and are
-discussed below. In the measures section that follows we refer to them
-as Sample 1 and Sample 2. Sample 1 is from a co-ed liberal arts college
-in the northeast and Sample 2 is from a women's liberal arts college in
-the northeast.
+Data from two different, but demographically equivalent, samples were
+combined to create the final analysis sample (\emph{N =} 64) used in
+this study. In the measures section that follows we refer to them as
+Sample 1 and Sample 2. Sample 1 (\emph{N =} 24) is from a co-ed liberal
+arts college in the northeast US and Sample 2 (\emph{N =} 40) is from a
+women's liberal arts college in the northeast US.
+
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:corrtable}Correlations among study variables.}
+\begin{tabular}{llllllll}
+\toprule
+ & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{2} & \multicolumn{1}{c}{3} & \multicolumn{1}{c}{4} & \multicolumn{1}{c}{5}\\
+\midrule
+Actor's trait self objectification (TSO) & -0.35 & 2.64 &  &  &  &  & \\
+Actor's authenticity of interaction & 5.23 & 1.02 & -.02 &  &  &  & \\
+Actor's objectification of partner & -1.58 & 1.21 & .20 & -.07 &  &  & \\
+Actor's state self-objectification & 1.92 & 1.13 & .13 & -.10 & -.09 &  & \\
+Actor's future relationship agency & 4.69 & 0.96 & .04 & .23+ & .09 & -.09 & \\
+Actor's cognitive performance & 5.03 & 2.29 & .08 & .11 & .11 & .02 & .07\\
+\bottomrule
+\end{tabular}
+\end{threeparttable}
+\end{center}
+\end{table}
+
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:descriptives}Descriptive Statistics for Study Variables}
+\begin{tabular}{lll}
+\toprule
+ & \multicolumn{1}{c}{M} & \multicolumn{1}{c}{SD}\\
+\midrule
+Actor's trait self objectification (TSO) & -0.35 & 2.64\\
+Actor's authenticity of interaction & 5.23 & 1.02\\
+Actor's objectification of partner & -1.58 & 1.21\\
+Actor's state self-objectification & 1.92 & 1.13\\
+Actor's future relationship agency & 4.69 & 0.96\\
+Actor's cognitive performance & 5.03 & 2.29\\
+\bottomrule
+\end{tabular}
+\end{threeparttable}
+\end{center}
+\end{table}
 
 \subsection{Post interaction Measures}\label{post-interaction-measures}
 
@@ -403,97 +449,156 @@ of 12 same-race pairs. The remaining 20 were mixed race pairs, of which
 group pairs. 64.06\% of the sample identified as heterosexual, and 25\%
 identified as gay, lesbian or bisexual.
 
+\section{Results}\label{results}
+
 \subsection{Data analysis}\label{data-analysis}
 
-We used R (Version 3.4.1; R Core Team, 2017) and the R-packages
+We used R (Version 3.5.2; R Core Team, 2017) and the R-packages
 \emph{apaTables} (Version 2.0.5; Stanley, 2018), \emph{devtools}
-(Version 2.0.1; Wickham, Hester, \& Chang, 2018), \emph{dplyr} (Version
-0.8.0.1; Wickham, François, Henry, \& Müller, 2018), \emph{forcats}
-(Version 0.3.0; Wickham, 2018), \emph{ggformula} (Version 0.6; D. Kaplan
-\& Pruim, 2017), \emph{ggplot2} (Version 3.1.0.9000; Wickham, 2016),
+(Version 1.13.5; Wickham, Hester, \& Chang, 2018), \emph{dplyr} (Version
+0.8.3; Wickham, François, Henry, \& Müller, 2018), \emph{forcats}
+(Version 0.3.0; Wickham, 2018), \emph{ggformula} (Version 0.7.0; D.
+Kaplan \& Pruim, 2017), \emph{ggplot2} (Version 3.2.1; Wickham, 2016),
 \emph{haven} (Version 2.1.0; Wickham \& Miller, 2019), \emph{irr}
-(Version 0.84; Gamer, Lemon, \&
+(Version 0.84.1; Gamer, Lemon, \&
 \textless{}puspendra.pusp22@gmail.com\textgreater{}, 2012), \emph{knitr}
-(Version 1.22; Xie, 2015), \emph{kutils} (Version 1.67; Johnson, Kite,
-\& Redmon, 2019), \emph{lattice} (Version 0.20.35; Sarkar, 2008),
-\emph{lavaan} (Version 0.6.3; Rosseel, 2012), \emph{lpSolve} (Version
-5.6.13; Berkelaar \& others, 2015), \emph{Matrix} (Version 1.2.10; Bates
-\& Maechler, 2017), \emph{mosaic} (Version 1.1.0; Pruim, Kaplan, \&
-Horton, 2017, 2016), \emph{mosaicData} (Version 0.14.0; Pruim et al.,
-2016), \emph{nlme} (Version 3.1.131; Pinheiro, Bates, DebRoy, Sarkar, \&
+(Version 1.25; Xie, 2015), \emph{kutils} (Version 1.70; Johnson, Kite,
+\& Redmon, 2019), \emph{lattice} (Version 0.20.38; Sarkar, 2008),
+\emph{lavaan} (Version 0.6.1; Rosseel, 2012), \emph{lpSolve} (Version
+5.6.15; Berkelaar \& others, 2015), \emph{Matrix} (Version 1.2.15; Bates
+\& Maechler, 2017), \emph{mosaic} (Version 1.2.0; Pruim, Kaplan, \&
+Horton, 2017, 2016), \emph{mosaicData} (Version 0.17.0; Pruim et al.,
+2016), \emph{nlme} (Version 3.1.137; Pinheiro, Bates, DebRoy, Sarkar, \&
 R Core Team, 2017), \emph{papaja} (Version 0.1.0.9842; Aust \& Barth,
-2018), \emph{psych} (Version 1.7.8; Revelle, 2017), \emph{purrr}
+2018), \emph{psych} (Version 1.8.4; Revelle, 2017), \emph{purrr}
 (Version 0.3.2; Henry \& Wickham, 2019), \emph{readr} (Version 1.1.1;
 Wickham, Hester, \& Francois, 2017), \emph{stringr} (Version 1.4.0;
-Wickham, 2019), \emph{tibble} (Version 2.1.1; Müller \& Wickham, 2019),
-\emph{tidyr} (Version 0.8.3; Wickham \& Henry, 2019), \emph{tidyverse}
-(Version 1.2.1; Wickham, 2017), \emph{usethis} (Version 1.4.0; Wickham
-\& Bryan, 2018), and \emph{xtable} (Version 1.8.4; Dahl, Scott, Roosen,
-Magnusson, \& Swinton, 2019) for all our analyses.
+Wickham, 2019), \emph{tibble} (Version 2.1.3; Müller \& Wickham, 2019),
+\emph{tidyr} (Version 1.0.0; Wickham \& Henry, 2019), \emph{tidyverse}
+(Version 1.2.1; Wickham, 2017), \emph{usethis} (Wickham \& Bryan, 2018),
+and \emph{xtable} (Version 1.8.3; Dahl, Scott, Roosen, Magnusson, \&
+Swinton, 2019) for all our analyses.
 
-\section{Results}\label{results}
+\begin{figure}
+\includegraphics[width=400px]{APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=400px]{2016_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:2016figure}
+\end{figure}
 
 \subsection{Analysis Strategy}\label{analysis-strategy}
 
 This study sought to replicate the results of Garcia et al. (2016)'s
-study, done with male-female pairs, which used dyadic analysis to detect
-whether partners' objectification of one another affected state
-self-objectification (SSO). See Figure~\ref{fig:2016figure} for the path
-analysis results of the previous study. We hope to investigate how the
-main effects found in the previous study relay to interactions between
-women: specifically, the relationship between state-other
-objectification and self-state objectification and the resulting effect
-of self-state objectification on inauthenticity during the interaction.
+study, done with male-female pairs, which used a dyadic path analysis to
+detect whether partners' objectification of one another affected state
+self-objectification (SSO). See Figure~\ref{fig:2016figure} for the
+results of the analysis from this previous study. We hope to investigate
+how the central effects found in the previous study relate to
+interactions between two women. Specifically, we are interested in
+testing the relationship between state-other objectification and SSO,
+and how SSO in turn, affecs feelings of inauthenticity during the
+interaction. In addition, we will also test if the effect of
+other-objectification in an interaction on SSO is only present for those
+women who are high in trait self-objectification, as in Garcia et al.
+(2016). Further, we will investigate the realtionships between
+experiencing interaction inauthenticity and relationship agency, career
+aspirations, and cognitive performance.
 
-We used path analysis to obtain our estimates, but because our sample is
-nonindependent, we used the indistinguishable actor--partner
-interdependence model (Olsen \& Kenny, 2006). The APIM can be defined as
-a \enquote{model of dyadic relationships that integrates a conceptual
-view of interdependence with the appropriate statistical techniques for
-measuring and testing it} (Olsen \& Kenny, 2006). See
-Figure~\ref{fig:apim} for a basic APIM model. Unlike the original Garcia
-et al. (2016) study, our study deals with indistinguishable dyads,
-meaning the designation of who is designated as \enquote{actor} and who
-is designated as \enquote{partner} is arbitrary. Due to constraints of
-the basic APIM, in that this was an exploration of indistinguishable
-female dyads, we had to fix all path estimates to be the same
-across/between people and partners, in addition to all variances,
-covariances, endogenous intercepts, and exogenous means. Due to the
-complexity of the original Garcia et al. (2016) study, we also had to
-set the exogenous covariances equal. More specifically, the covariances
-between TSO, actor and partner objectification, and the interaction
-between actor TSO and partner objectification (and vice versa).
+While Garcia et al. (2016) used dyadic path analysis, we will conduct
+our dyadic analyses using multilevel modeling. Dyadic analyses for
+distingishable dyads (e.g., mixed-gender interacting pairs) is more
+natural in Structual Equation Modeling (SEM) than it is for
+indistinguishable dayds (e.g., same-gender interacting pairs) (Garcia,
+Kenny, \& Ledermann, 2015; Ledermann \& Kenny, 2017). One reason for
+this asymmetry is that, due to the arbitrary distinctions made bewteen
+\enquote{partner 1} and \enquote{partner 2} in indistinguishable dyads,
+many estimates need to be fixed to be equal (i.e., paths, variances,
+covariances, endogenous intercepts, and exogenous means) for
+indistinguishable dyads but these equality contraints should not then be
+considered in the degrees of freedom calculations for fit estimations
+(Olsen \& Kenny, 2006). Further, Olsen and Kenny (2006) detail how a new
+independence model and the corresponding fit measure should be
+re-calculated for indistinguishable dyads models. The current study uses
+dyadic multilevel modeling (MLM) to test all relationships and mediation
+paterns. See Ledermann and Kenny (2017) for a more complete discussion
+of the considerations for using SEM versus MLM for dyadic analysis.
 
-In order to interpret model fit, which refers to the ability of a model
-to reproduce the data (i.e., usually the varience-covariance matrix) we
-utilized both the I-SAT (saturated) model, and the Null model to ensure
-that all possible corresponding covariences are fixed to be equal across
-partners. We obtained fit estimates by subtracting the chi-square
-estimate for the I-SAT model from the analysis model (Olsen \& Kenny,
-2006, Peugh, DiLillo, and Panuzio (2013)).
+Testing the Garcia et al. (2016) model on the current, same-gender,
+sample, involves using the Actor-Partner Independence Model (APIM)
+approch for each outcome variable (i.e., endogenous variable in
+Figure~\ref{fig:2016figure}). Thus, we ran five APIM's to test all the
+hypothesized relationships. See Figure~\ref{fig:apim} for a basic APIM
+model. The APIM includes effects due to one's own, as well as one's
+partner's, predictor variables (\(X\)'s) on the one's own outcome
+variable (\(Y\)). Unlike the original Garcia et al. (2016) study, our
+study deals with indistinguishable dyads, meaning the designation of who
+is designated as \enquote{actor} and who is designated as
+\enquote{partner} is arbitrary. Recall that the indistinguiahble nature
+of the dyads in the current study led us to choose the MLM approach over
+SEM. These analyses are considered exploratory, given the lack of prior
+research theorizing about these linkages.
+
+\begin{figure}
+\includegraphics[width=400px]{SEMfigure} \caption{Path Analysis Model with Estimates}\label{fig:semfigure}
+\end{figure}
 
 \subsection{Main Results}\label{main-results}
 
-All model estimates and p-values are found in Table~\ref{tab:sem}. The
-most important findings from Garcia et al. (2016) were the significant
-partner effect between actor SSO and partner objectification
-(specifically men's objectification of women and women's SSO), and the
-link between actor SSO and actor authenticity (also specifically for
-women). We did not find a significant effect between actor SSO and actor
-authenticity (\(\beta\)= -.10, \(p\)=.38), which means we do not have
-evidence to support the idea that partner objectification is the cause
-for the negative effects related to relationship inauthenticity.
-However, we did find a significant relationship between partner
-objectification and actor SSO (\(\beta\)= .25, \(p\)=.03), which
-supports our hypothesis that objectification from other women also
-causes women to self-objectify just as it does in interactions between
-male-female pairs. We also found a significantly negative effect of
-authenticity on career aspirations (\(\beta\)= .18, \(p\)=.01) and
-relationship agency (\(\beta\)=.27, \(p\)=.01). We found that the model
-had good fit (\(\chi^2\)=22.33, \(df\)=34). In this case, a good fit
-indicates that there are no direct effects of SSO or SOO on the outcomes
-on cognitive performance, relationship agency, and career aspirations,
-which indicates that the path we chose makes sense.
+All model estimates and p-values are found in Table~\ref{tab:mlm} and
+the relationships with estimates included are depicted in
+Figure~\ref{fig:semfigure}.
+
+The most important finding from Garcia et al. (2016) was the significant
+partner effect of other objectification and SSO (specifically men's
+objectification of women and women's SSO). As expected, the partner
+effect of other-objectification on SSO in the current all-women sample
+was statistically signficant, \emph{b} = 0.29, \emph{SE} = 0.12,
+\emph{p} = .017, replicating Garcia et al. (2016)'s fiding. One's own
+other objectification had no effect on SSO, \emph{b} = -0.16, \emph{SE}
+= 0.12, \emph{p} = .193. Contrary to past finding however, there was no
+statistically significant interaction of partner's other objectification
+and the person's trait self-objectification on SSO, \emph{b} = -0.02,
+\emph{SE} = 0.04, \emph{p} = .589. There was also no significant main
+effect of trait self-objectification on SSO \emph{b} = 0.07, \emph{SE} =
+0.05, \emph{p} = .170.
+
+Contrary to expectations, there was no significant effect of SSO on
+interaction authenticity, although the estimate of this effect was in
+the hypothesized negative direction, \emph{b} = -0.09, \emph{SE} = 0.11,
+\emph{p} = .415. Because authenticity was a composite score of 9 items,
+two of which were interaction specific authenticity items, we also
+tested the effect of SSO on these items individually\ldots{}ADD
+ANALYSIS\ldots{}Although we hypothesized that SSO would mediate the
+relationship between partner's other objectification and interaction
+authenticity, after finding no relationship bewteen SSO and authencity,
+we also tested if the partner's other objectification had a direct
+effect on authenticity, but this effect was not significant, \emph{b} =
+0.05, \emph{SE} = 0.11, \emph{p} = .662 (nor was the total effect of
+partner's other objectification on authenticity, \emph{b} = 0.02,
+\emph{SE} = 0.1, \emph{p} = .855).
+
+Lastly, althought there was no evidence that SSO was related to
+interaction authenticity in the current sample, we tested if interaction
+authenticity (composite of nine items) had effects on cognitive
+performace, career aspirations, and relationship agency, as it did in
+Garcia et al. (2016). We again used MLM and thus, these efefcts were
+tested in three separate models. There was no significant effect of
+interaction authenticity on cognitive performance, \emph{b} = 0.31,
+\emph{SE} = 0.28, \emph{p} = .262, but authenticity was significantly
+positively related to both career aspirations, \emph{b} = 0.19,
+\emph{SE} = 0.07, \emph{p} = .009, and relationships agency, \emph{b} =
+0.23, \emph{SE} = 0.12, \emph{p} = .048. There was no direct effect of
+SSO on cognitive performance, \emph{b} = 0.05, \emph{SE} = 0.25,
+\emph{p} = .846, and no direct effect of partner's other objectificaiton
+on cognifitve performance, \emph{b} = 0.03, \emph{SE} = 0.26, \emph{p} =
+.900. There was no direct effect of SSO on career aspirations, \emph{b}
+= 0.03, \emph{SE} = 0.06, \emph{p} = .653, and no direct effect of
+partner's other objectificaiton on career aspirations, \emph{b} = -0.05,
+\emph{SE} = 0.06, \emph{p} = .405. There was no direct effect of SSO on
+relationship agency, \emph{b} = -0.04, \emph{SE} = 0.11, \emph{p} =
+.699, and no direct effect of partner's other objectificaiton on
+relationship agency, \emph{b} = -0.07, \emph{SE} = 0.1, \emph{p} = .474.
 
 \section{Discussion}\label{discussion}
 
@@ -542,89 +647,9 @@ and young women, where scholars and practitioners might provide the
 tools necessary to circumvent or mitigate negative effects on
 self-objectification, and combat such experiences.
 
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:corrtable}Correlations among study variables.}
-\begin{tabular}{llllllll}
-\toprule
- & \multicolumn{1}{c}{$M$} & \multicolumn{1}{c}{$SD$} & \multicolumn{1}{c}{1} & \multicolumn{1}{c}{2} & \multicolumn{1}{c}{3} & \multicolumn{1}{c}{4} & \multicolumn{1}{c}{5}\\
-\midrule
-Actor's trait self objectification (TSO) & -0.35 & 2.64 &  &  &  &  & \\
-Actor's authenticity of interaction & 5.23 & 1.02 & -.02 &  &  &  & \\
-Actor's objectification of partner & -1.58 & 1.21 & .20 & -.07 &  &  & \\
-Actor's state self-objectification & 1.92 & 1.13 & .13 & -.10 & -.09 &  & \\
-Actor's future relationship agency & 4.69 & 0.96 & .04 & .23+ & .09 & -.09 & \\
-Actor's cognitive performance & 5.03 & 2.29 & .08 & .11 & .11 & .02 & .07\\
-\bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:descriptives}Descriptive Statistics for Study Variables}
-\begin{tabular}{lll}
-\toprule
- & \multicolumn{1}{c}{M} & \multicolumn{1}{c}{SD}\\
-\midrule
-Actor's trait self objectification (TSO) & -0.35 & 2.64\\
-Actor's authenticity of interaction & 5.23 & 1.02\\
-Actor's objectification of partner & -1.58 & 1.21\\
-Actor's state self-objectification & 1.92 & 1.13\\
-Actor's future relationship agency & 4.69 & 0.96\\
-Actor's cognitive performance & 5.03 & 2.29\\
-\bottomrule
-\end{tabular}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-\begin{table}[tbp]
-\begin{center}
-\begin{threeparttable}
-\caption{\label{tab:sem}Estimates from final Path Analysis Model}
-\small{
-\begin{tabular}{lllllll}
-\toprule
-Path & \multicolumn{1}{c}{} & \multicolumn{1}{c}{} & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{SE} & \multicolumn{1}{c}{z-value} & \multicolumn{1}{c}{p-value}\\
-\midrule
-Actor SSO & \textasciitilde{} & Actor TSO & 0.08 & 0.09 & 0.91 & 0.36\\
-Actor SSO & \textasciitilde{} & Actor Obj. of Partner & -0.17 & 0.12 & -1.41 & 0.16\\
-Actor SSO & \textasciitilde{} & Partner Obj. of Actor & 0.25 & 0.12 & 2.15 & 0.03\\
-Actor SSO & \textasciitilde{} & Actor TSO x Partner Obj. & 0.00 & 0.04 & -0.10 & 0.92\\
-Actor Authenticity & \textasciitilde{} & Actor SSO & -0.10 & 0.12 & -0.88 & 0.38\\
-Actor Cog. Performance & \textasciitilde{} & Actor Authenticity & 0.33 & 0.27 & 1.22 & 0.22\\
-Actor Career Aspirations & \textasciitilde{} & Actor Authenticity & 0.18 & 0.07 & 2.66 & 0.01\\
-Actor Rel. Agency & \textasciitilde{} & Actor Authenticity & 0.27 & 0.10 & 2.64 & 0.01\\
-\bottomrule
-\end{tabular}
-}
-\end{threeparttable}
-\end{center}
-\end{table}
-
-\begin{figure}
-\includegraphics[width=400px]{APIM_figure} \caption{Basic actor-partner interdependence model (APIM) depiction.}\label{fig:apim}
-\end{figure}
-
-\begin{figure}
-\includegraphics[width=400px]{2016_figure} \caption{Path Analysis Model from Garcia et al. (2016) study with distinguishable dyads.}\label{fig:2016figure}
-\end{figure}
-
-\begin{figure}
-\includegraphics[width=400px]{SEMfigure} \caption{Path Analysis Model with Estimates}\label{fig:semfigure}
-\end{figure}
-
-\newpage
-
 \section{References}\label{references}
 
-\begin{verbatim}
-## [1] "R [Version 3.4.1; @R-base]"
-\end{verbatim}
+\newpage
 
 \begingroup
 \setlength{\parindent}{-0.5in} \setlength{\leftskip}{0.5in}
@@ -713,6 +738,11 @@ in action: Self-and other-objectification in mixed-sex interpersonal
 interactions. \emph{Psychology of Women Quarterly}, \emph{40}(2),
 213--228.
 
+\hypertarget{ref-garcia2015moderation}{}
+Garcia, R. L., Kenny, D. A., \& Ledermann, T. (2015). Moderation in the
+actor--partner interdependence model. \emph{Personal Relationships},
+\emph{22}(1), 8--29.
+
 \hypertarget{ref-R-purrr}{}
 Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming
 tools}. Retrieved from \url{https://CRAN.R-project.org/package=purrr}
@@ -744,6 +774,11 @@ J. (1998). That swimsuit becomes you: Sex differences in
 self-objedification, restrained eating, and math performance.
 \emph{Journal of Personality and Social Psychology}, \emph{75}, 269--84.
 doi:\href{https://doi.org/10.1037/0022-3514.75.1.269}{10.1037/0022-3514.75.1.269}
+
+\hypertarget{ref-ledermann2017analyzing}{}
+Ledermann, T., \& Kenny, D. A. (2017). Analyzing dyadic data with
+multilevel modeling versus structural equation modeling: A tale of two
+methods. \emph{Journal of Family Psychology}, \emph{31}(4), 442.
 
 \hypertarget{ref-loughnan2015}{}
 Loughnan, S., Fernandez-Campos, S., Vaes, J., Anjum, G., Aziz, M.,
@@ -781,11 +816,6 @@ P. Gray, M., \& M. OBrien, K. (2007). Advancing the assessment of
 women's career choices: The career aspiration scale. \emph{Journal of
 Career Assessment - J CAREER ASSESSMENT}, \emph{15}, 317--337.
 doi:\href{https://doi.org/10.1177/1069072707301211}{10.1177/1069072707301211}
-
-\hypertarget{ref-peugh2013analyzing}{}
-Peugh, J. L., DiLillo, D., \& Panuzio, J. (2013). Analyzing mixed-dyadic
-data using structural equation models. \emph{Structural Equation
-Modeling: A Multidisciplinary Journal}, \emph{20}(2), 314--337.
 
 \hypertarget{ref-R-nlme}{}
 Pinheiro, J., Bates, D., DebRoy, S., Sarkar, D., \& R Core Team. (2017).
